--- a/src/assets/style/components/_modal.scss
+++ b/src/assets/style/components/_modal.scss
@@ -14,7 +14,8 @@
     background-color: $veryLightGray;
     width: calc(100% - 30px);
     border-radius: 10px;
-    padding: 20px;
+    padding: 30px;
+    max-width: 370px;
 
     strong {
       font-size: 18px;
@@ -36,9 +37,10 @@
       button {
         border: none;
         border-radius: 8px;
-        padding: 12px 25px;
+        padding: 12px 3px;
         color: $veryLightGray;
         font-weight: 500;
+        width: 48%;
 
         &:nth-child(1) {
           background-color: $darkBlue;
